# tuxtui

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  STATUS.md  prompt.md  rustfmt.toml
.github/: README.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  question.md
.github/workflows/: ci.yml
crates/tuxtui/: Cargo.toml  README.md
crates/tuxtui-core/: Cargo.toml  README.md
crates/tuxtui-core/benches/: rendering.rs
crates/tuxtui-core/src/: backend.rs  buffer.rs  event.rs  geometry.rs  layout.rs  lib.rs  prelude.rs  style.rs  symbols.rs  terminal.rs  tests.rs  text.rs  theme.rs  util.rs  viewport.rs
crates/tuxtui-crossterm/: Cargo.toml  README.md
crates/tuxtui-crossterm/src/: lib.rs
crates/tuxtui-macros/: Cargo.toml  README.md
crates/tuxtui-macros/src/: lib.rs
crates/tuxtui-termion/: Cargo.toml  README.md
crates/tuxtui-termion/src/: lib.rs
crates/tuxtui-termwiz/: Cargo.toml  README.md
crates/tuxtui-termwiz/src/: lib.rs
crates/tuxtui-widgets/: Cargo.toml  README.md
crates/tuxtui-widgets/src/: barchart.rs  block.rs  calendar.rs  canvas.rs  chart.rs  gauge.rs  input.rs  lib.rs  list.rs  paragraph.rs  popup.rs  prelude.rs  scrollbar.rs  sparkline.rs  table.rs  tabs.rs  tree.rs
crates/tuxtui/src/: lib.rs
docs/: QUICK_REFERENCE.md
examples/: dashboard.rs  file_explorer.rs  form_input.rs  hello_world.rs  modals.rs  mouse_events.rs  todo_list.rs  widgets_demo.rs
scripts/: publish.sh  verify-publish.sh
xtask/src/: main.rs
